User registration & auth

--- a/tasklist/templates/tasklist/base.html
+++ b/tasklist/templates/tasklist/base.html
@@ -17,4 +17,5 @@
         {% block content %}
         {% endblock %}
     </body>
+    <script type="text/javascript" src="{% static "js/script.js" %}"></script>
 </html>
