--- a/tasklist/templates/tasklist/task_list.html
+++ b/tasklist/templates/tasklist/task_list.html
@@ -1,6 +1,11 @@
 {% extends 'tasklist/base.html' %}
 
 {% block content %}
+    {% if user.is_authenticated %}
+        howdy {{ user.username }}! <a href="{% url 'logout' %}">log out</a>
+    {% else %}
+        <a href="{% url 'login' %}">log in</a>
+    {% endif %}
     <div id="tasklist">
         <ul class="list-group">
             {% for task in tasks %}
@@ -13,9 +18,13 @@
                 </li>
             {% endfor %}
         </ul>
-        <form method="POST" class="post-form">{% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Save</button>
-    </form>
+        {% if user.is_authenticated %}
+        <form method="POST" class="post-form">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="save btn btn-default">Save</button>
+        </form>
+        {% endif %}
+
     </div>
 {% endblock %}
