--- a/tasklist/templates/tasklist/base.html
+++ b/tasklist/templates/tasklist/base.html
@@ -13,6 +13,15 @@
     <body>
         <div id="headerbar">
             <h1>TaskRPG</h1>
+            {% if user.is_authenticated %}
+                <p>
+                {{ user.username }} // <a href="{% url 'logout' %}">log out</a>
+                </p>
+            {% elif request.get_full_path != "/login/" %}
+                <p>
+                <a href="{% url 'login' %}">log in</a>
+                </p>
+            {% endif %}
         </div>
         {% block content %}
         {% endblock %}
