--- a/tasklist/templates/tasklist/task_list.html
+++ b/tasklist/templates/tasklist/task_list.html
@@ -4,12 +4,13 @@
     <div id="tasklist">
         <ul class="list-group">
             {% for task in tasks %}
-                <li class="list-group-item">
+                <li class="list-group-item" id="task-{{ task.id }}">
                     <div class="taskwrapper">
                         <input type="checkbox" id="checkbox{{ forloop.counter }}">
                         <h4>{{ task }}</h4>
                         <p>{{ task.created_date }}</p>
-                        <p>{{ task.id }}</p>
+                        <p>ID#:{{ task.id }}</p>
+                        <button onclick="delete_task('{{ task.id }}');" class="btn">Done</button>
 
                     </div>
                 </li>
@@ -19,9 +20,9 @@
         <form method="POST" class="post-form">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="save btn btn-default">Save</button>
+            <button type="submit" class="save btn btn-default" name="add_task">Save</button>
         </form>
         {% endif %}
-
     </div>
+
 {% endblock %}
