Ajax'd adding tasks

--- a/tasklist/static/css/tasklist.css
+++ b/tasklist/static/css/tasklist.css
@@ -82,8 +82,7 @@ body {
 
 }
 
-.taskwrapper input[type="checkbox"] {
-    position: relative;
-
+.strikethrough {
+    text-decoration: line-through;
+    opacity: 0.5;
 }
-
