--- a/tasklist/templates/tasklist/base.html
+++ b/tasklist/templates/tasklist/base.html
@@ -8,7 +8,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="{% static 'css/tasklist.css' %}">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
     </head>
     <body>
         <div id="headerbar">
@@ -23,8 +23,10 @@
                 </p>
             {% endif %}
         </div>
-        {% block content %}
-        {% endblock %}
+        <div id="main">
+            {% block content %}
+            {% endblock %}
+        </div>
     </body>
     <script type="text/javascript" src="{% static "js/script.js" %}"></script>
 </html>
