--- a/tasklist/templates/tasklist/login.html
+++ b/tasklist/templates/tasklist/login.html
@@ -9,4 +9,5 @@
         Password: <input type="password" name="password" value="" size="50" />
         <input type="submit" value="submit" />
     </form>
+    <h2><a href="{% url 'register' %}">Register</a></h2>
 {% endblock %}
