--- a/tasklist/templates/tasklist/task_list.html
+++ b/tasklist/templates/tasklist/task_list.html
@@ -7,7 +7,7 @@
             {% for task in tasks %}
                 <li class="list-group-item" id="task-{{ task.id }}">
                     <div class="taskwrapper">
-                        <h4>{{ task }}</h4>
+                        <h4 class="{% if task.completed %}completed{% endif %}">{{ task }}</h4>
                         <p>{{ task.created_date }}</p>
                         <p>ID#:{{ task.id }}</p>
                         <button onclick="delete_task('{{ task.id }}');" class="btn">Done</button>
@@ -15,10 +15,12 @@
                 </li>
             {% endfor %}
         </ul>
+    </div>
+    <div id="taskform">
         <form onsubmit="add_task();return false;" id="new_task_form" class="form-horizontal">
             {% csrf_token %}
             <div class="controls">
-                <input type="text" placeholder="Enter Task Text" id="newtask-text"/>
+                <input type="text" placeholder="Enter Task Text" id="newtask-text" required/>
             </div>
             <div class="control-group">
                 <label class="control-label"></label>
@@ -27,13 +29,6 @@
                 </div>
             </div>
         </form>
-        <!--
-        <form method="POST" class="post-form">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" class="save btn btn-default" name="add_task">Save</button>
-        </form>
-        -->
     </div>
     {% else %}
     <div id="nologin">
