--- a/tasklist/templates/tasklist/new_task.html
+++ b/tasklist/templates/tasklist/new_task.html
@@ -1,8 +1,12 @@
 <li class="list-group-item" id="task-{{ task.id }}" style="display: none">
     <div class="taskwrapper">
-        <h4>{{ task }}</h4>
-        <p>{{ task.created_date }}</p>
-        <p>ID#:{{ task.id }}</p>
-        <button onclick="delete_task('{{ task.id }}');" class="btn">Done</button>
+        <span class="task-left">
+            <h4>{{ task }}</h4>
+        </span>
+        <span class="task-right">
+            <p>{{ task.created_date }}</p>
+            <p>ID#:{{ task.id }}</p>
+            <button onclick="delete_task('{{ task.id }}');" class="btn">Done</button>
+        </span>
     </div>
 </li>
