--- a/tasklist/static/css/style.css
+++ b/tasklist/static/css/style.css
@@ -1,4 +1,3 @@
-
 body {
 font-family: 'Ubuntu Mono', monospace;
 }
@@ -10,8 +9,9 @@ font-family: 'Ubuntu Mono', monospace;
 }
 
 .navbar {
-
+    border-radius: 0 !important;
 }
+
 .navbar p {
     padding-left: 15px;
 }
@@ -90,5 +90,5 @@ font-family: 'Ubuntu Mono', monospace;
 }
 
 .progress-rest {
-  background-color: #F6FA9C;
+  background-color: #00DD99;
 }
