--- a/tasklist/templates/tasklist/new_task.html
+++ b/tasklist/templates/tasklist/new_task.html
@@ -1,12 +1,12 @@
 <li class="list-group-item" id="task-{{ task.id }}" style="display: none">
     <div class="taskwrapper">
-        <span class="task-left">
-            <h4>{{ task }}</h4>
-        </span>
-        <span class="task-right">
-            <p>{{ task.created_date }}</p>
+        <div class="task-left">
+            <h4 class="{% if task.completed %}completed{% endif %}">{{ task }}</h4>
+        </div>
+        <div class="task-right">
+            <p>{{ task.created_date|date:'Y-m-d H:i' }}</p>
             <p>ID#:{{ task.id }}</p>
-            <button onclick="delete_task('{{ task.id }}');" class="btn">Done</button>
-        </span>
+            <button onclick="delete_task('{{ task.id }}');" class="btn"><span class="glyphicon glyphicon-trash"></span></button>
+        </div>
     </div>
 </li>
