--- a/tasklist/templates/tasklist/task_list.html
+++ b/tasklist/templates/tasklist/task_list.html
@@ -11,9 +11,9 @@
         </div>
         <div id="prog-bar"></div>
         <div id="timercontrols" class="control-buttons">
-            <button type="button" class="btn btn-default" ng-click="start()">start</button>
-            <button type="button" class="btn btn-default" ng-click="pause()">pause</button>
-            <button type="button" class="btn btn-default" ng-click="reset()">reset</button>
+            <button type="button" class="btn btn-default" ng-click="start()"><span class="glyphicon glyphicon-play" ></span></button>
+            <button type="button" class="btn btn-default" ng-click="pause()"><span class="glyphicon glyphicon-pause"></span></button>
+            <button type="button" class="btn btn-default" ng-click="reset()"><span class="glyphicon glyphicon-repeat"></span></button>
         </div>
     </div>
     <div id="tasklist">
@@ -27,7 +27,7 @@
                         <div class="task-right">
                             <p>{{ task.created_date|date:'Y-m-d H:i' }}</p>
                             <p>ID#:{{ task.id }}</p>
-                            <button onclick="delete_task('{{ task.id }}');" class="btn">Done</button>
+                            <button onclick="delete_task('{{ task.id }}');" class="btn"><span class="glyphicon glyphicon-trash"></span></button>
                         </div>
                     </div>
                 </li>
@@ -55,3 +55,5 @@
     {% endif %}
 
 {% endblock %}
+
+
