Update button functionality

--- a/tasklist/templates/tasklist/task_list.html
+++ b/tasklist/templates/tasklist/task_list.html
@@ -12,8 +12,8 @@
         </div>
         <div id="prog-bar"></div>
         <div id="timercontrols" class="control-buttons">
-            <button type="button" class="btn btn-default" ng-click="start()"><span class="glyphicon glyphicon-play" ></span></button>
-            <button type="button" class="btn btn-default" ng-click="pause()"><span class="glyphicon glyphicon-pause"></span></button>
+            <button type="button" class="btn btn-default" id="startbutton" ng-click="start()"><span class="glyphicon glyphicon-play" ></span></button>
+            <button type="button" class="btn btn-default" id="pausebutton" ng-click="pause()"><span class="glyphicon glyphicon-pause"></span></button>
             <button type="button" class="btn btn-default" ng-click="reset()"><span class="glyphicon glyphicon-repeat"></span></button>
         </div>
     </div>
